compelate footer - and responsive projekt

--- a/index.html
+++ b/index.html
@@ -80,6 +80,74 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </div>
 <!--end slider-->
+<!--foter-->
+<div class="footer">
+<div class="footers">
+  <h1>
+    helo-world
+  </h1>
+  <img src="./img/l35-architects-sobre-la-remodelacion-del-estadio-santiago-bernabeu-de-madrid-a-pocos-meses-de-finalizar_16.jpg" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae deserunt in soluta vitae, culpa maxime deleniti vero tempora totam blanditiis molestias voluptates nisi repudiandae, impedit dolore, magni ipsa. Quaerat possimus, fugit labore, ducimus vel molestias, harum repellat provident ullam doloribus soluta quibusdam laborum aliquid consequatur dolorem quos. Blanditiis, atque consequatur.</p>
+  <a href="#">read-more</a>
+</div>
+<div class="footers">
+  <h1>
+    helo-world
+  </h1>
+  <img src="./img/Reforma-del-estadio-Santiago-Bernabu-05_2000x1125.webp" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae deserunt in soluta vitae, culpa maxime deleniti vero tempora totam blanditiis molestias voluptates nisi repudiandae, impedit dolore, magni ipsa. Quaerat possimus, fugit labore, ducimus vel molestias, harum repellat provident ullam doloribus soluta quibusdam laborum aliquid consequatur dolorem quos. Blanditiis, atque consequatur.</p>
+  <a href="#">read-more</a>
+</div>
+<div class="footers">
+  <h1>
+    helo-world
+  </h1>
+  <img src="./img/san-4.avif" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae deserunt in soluta vitae, culpa maxime deleniti vero tempora totam blanditiis molestias voluptates nisi repudiandae, impedit dolore, magni ipsa. Quaerat possimus, fugit labore, ducimus vel molestias, harum repellat provident ullam doloribus soluta quibusdam laborum aliquid consequatur dolorem quos. Blanditiis, atque consequatur.</p>
+  <a href="#">read-more</a>
+</div>
+<div class="footers">
+  <h1>
+    helo-world
+  </h1>
+  <img src="./img/images.jpg" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae deserunt in soluta vitae, culpa maxime deleniti vero tempora totam blanditiis molestias voluptates nisi repudiandae, impedit dolore, magni ipsa. Quaerat possimus, fugit labore, ducimus vel molestias, harum repellat provident ullam doloribus soluta quibusdam laborum aliquid consequatur dolorem quos. Blanditiis, atque consequatur.</p>
+  <a href="#">read-more</a>
+</div>
+<div class="footers">
+  <h1>
+    helo-world
+  </h1>
+  <img src="./img/santiago-bernabéu-stadium-madrid-2020-GettyImages-1194733745.webp" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae deserunt in soluta vitae, culpa maxime deleniti vero tempora totam blanditiis molestias voluptates nisi repudiandae, impedit dolore, magni ipsa. Quaerat possimus, fugit labore, ducimus vel molestias, harum repellat provident ullam doloribus soluta quibusdam laborum aliquid consequatur dolorem quos. Blanditiis, atque consequatur.</p>
+  <a href="#">read-more</a>
+</div>
+<div class="footers">
+  <h1>
+    helo-world
+  </h1>
+  <img src="./img/big-realmadridexperience427.webp" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae deserunt in soluta vitae, culpa maxime deleniti vero tempora totam blanditiis molestias voluptates nisi repudiandae, impedit dolore, magni ipsa. Quaerat possimus, fugit labore, ducimus vel molestias, harum repellat provident ullam doloribus soluta quibusdam laborum aliquid consequatur dolorem quos. Blanditiis, atque consequatur.</p>
+  <a href="#">read-more</a>
+</div>
+<div class="footers">
+  <h1>
+    helo-world
+  </h1>
+  <img src="./img/l35-architects-sobre-la-remodelacion-del-estadio-santiago-bernabeu-de-madrid-a-pocos-meses-de-finalizar_16.jpg" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae deserunt in soluta vitae, culpa maxime deleniti vero tempora totam blanditiis molestias voluptates nisi repudiandae, impedit dolore, magni ipsa. Quaerat possimus, fugit labore, ducimus vel molestias, harum repellat provident ullam doloribus soluta quibusdam laborum aliquid consequatur dolorem quos. Blanditiis, atque consequatur.</p>
+  <a href="#">read-more</a>
+</div>
+<div class="footers">
+  <h1>
+    helo-world
+  </h1>
+  <img src="./img/Reforma-del-estadio-Santiago-Bernabu-05_2000x1125.webp" alt="">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae deserunt in soluta vitae, culpa maxime deleniti vero tempora totam blanditiis molestias voluptates nisi repudiandae, impedit dolore, magni ipsa. Quaerat possimus, fugit labore, ducimus vel molestias, harum repellat provident ullam doloribus soluta quibusdam laborum aliquid consequatur dolorem quos. Blanditiis, atque consequatur.</p>
+  <a href="#">read-more</a>
+</div>
+</div>
+<!--end foter-->
 <!-- end website-->
   <!-- Initialize Swiper -->
   <script>
